--- a/nudes/nudes.html
+++ b/nudes/nudes.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/bluddien.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- InstanceBeginEditable name="doctitle" -->
 <title>Oleg Antimoni. Photographer</title>
 <!-- InstanceEndEditable -->
 <meta name="description" content="Oleg Antimoni. Photographer">
@@ -11,11 +10,8 @@
 <link rel="stylesheet" href="../bluddi.css" type="text/css" />
 <script src="../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
-<!-- InstanceBeginEditable name="head" -->
-<script src="../swfobject.js" type="text/javascript"></script>
-<!-- InstanceEndEditable -->
+<script src="swfobject.js" type="text/javascript"></script>
 </head>
-
 <body>
 <div id="outer">    
 <div id="topbluddi">
@@ -40,8 +36,7 @@
     </div>
   </div>
   <div id="topright"> </div>
-</div>
-<!-- InstanceBeginEditable name="tohen" -->       
+</div>      
 
 <div id="desktop">
     <div id="topas"> 
